Ajout des balises meta pour le référencement SEO

--- a/index.html
+++ b/index.html
@@ -3,7 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>QcodeG - Générateur de QR Code Personnalisé</title>
+  <title>QcodeG - Générateur de QR Code Personnalisé Gratuit</title>
+  
+  <!-- Meta tags SEO -->
+  <meta name="description" content="Générateur de QR code gratuit et personnalisable. Créez des QR codes avec des couleurs, styles et logos personnalisés. Téléchargez en PNG, JPEG, SVG ou PDF.">
+  <meta name="keywords" content="QR code, générateur QR code, QR code gratuit, QR code personnalisé, créer QR code, QR code couleur, QR code logo">
+  <meta name="author" content="Ibrahima - Développeur Web et Mobile">
+  <meta name="robots" content="index, follow">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://iburossy.github.io/QCodeG/">
+  <meta property="og:title" content="QcodeG - Générateur de QR Code Personnalisé Gratuit">
+  <meta property="og:description" content="Créez gratuitement des QR codes personnalisés avec couleurs, styles et textes. Téléchargez en PNG, JPEG, SVG ou PDF.">
+  <meta property="og:image" content="https://iburossy.github.io/QCodeG/images/qcodeg-preview.png">
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://iburossy.github.io/QCodeG/">
+  <meta property="twitter:title" content="QcodeG - Générateur de QR Code Personnalisé Gratuit">
+  <meta property="twitter:description" content="Créez gratuitement des QR codes personnalisés avec couleurs, styles et textes. Téléchargez en PNG, JPEG, SVG ou PDF.">
+  <meta property="twitter:image" content="https://iburossy.github.io/QCodeG/images/qcodeg-preview.png">
+  
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://iburossy.github.io/QCodeG/">
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="images/favicon.png">
+  
+  <!-- Styles -->
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/modal.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,6 +41,30 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script>window.jspdf = window.jspdf || { jsPDF: window.jsPDF };</script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  
+  <!-- Données structurées pour les moteurs de recherche (JSON-LD) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebApplication",
+    "name": "QcodeG - Générateur de QR Code Personnalisé",
+    "url": "https://iburossy.github.io/QCodeG/",
+    "description": "Générateur de QR code gratuit et personnalisable. Créez des QR codes avec des couleurs, styles et textes personnalisés. Téléchargez en PNG, JPEG, SVG ou PDF.",
+    "applicationCategory": "UtilityApplication",
+    "operatingSystem": "Web",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "EUR"
+    },
+    "author": {
+      "@type": "Person",
+      "name": "Ibrahima",
+      "url": "https://ibraportfolio.alwaysdata.net"
+    },
+    "keywords": "QR code, générateur QR code, QR code gratuit, QR code personnalisé, créer QR code"
+  }
+  </script>
 </head>
 <body>
   <div class="page-container">
