Ajout de la vérification Google Search Console

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="keywords" content="QR code, générateur QR code, QR code gratuit, QR code personnalisé, créer QR code, QR code couleur, QR code logo">
   <meta name="author" content="Ibrahima - Développeur Web et Mobile">
   <meta name="robots" content="index, follow">
+  <meta name="google-site-verification" content="ZzbL4DHOTXwVwbK1TfsIOwc_Q8ZjI9QWn4LZMer4EZM" />
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
